# mcp-simple-textedit

./: README.md  pyproject.toml
mcp_simple_textedit/: __init__.py  __main__.py  server.py  textedit_procedure.py
mcp_simple_textedit/tools/: __init__.py  append.py  edit.py  schemas.py  validation.py
