[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-simple-textedit"
version = "0.1.5"
authors = [
    { name="Andy Brandt", email="andy@codesprinters.com" },
]
description = "An MCP server that provides text file editing capabilities"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp",
]

[project.scripts]
mcp-simple-textedit = "mcp_simple_textedit.server:main"